--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,12 @@
   "action": {
     "default_popup": "index.html",
     "default_icon": "vite.svg"
-  }
+  },
+  "content_scripts": [
+    {
+      "js": ["src/scripts/content.tsx"],
+      "matches": ["<all_urls>"],
+      "run_at": "document_end"
+    }
+  ]
 }
