--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "default_popup": "index.html",
     "default_icon": "vite.svg"
   },
-  "permissions": ["tabs"],
+  "permissions": ["tabs", "storage"],
   "web_accessible_resources": [
     {
       "resources": ["src/assets/entry.png"],
